feat: reduce image size with alpine and amazon corretto jdk