@@ -1,4 +1,22 @@
-FROM eclipse-temurin:17-jdk-focal
+FROM amazoncorretto:17-alpine as corretto-jdk
+
+# required for strip-debug to work
+RUN apk add --no-cache binutils
+
+# Build small JRE image
+RUN jlink \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /jre
+
+FROM alpine:latest
+ENV JAVA_HOME=/jre
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+COPY --from=corretto-jdk /jre $JAVA_HOME
 
 ARG JAR_FILE
 ARG SPRING_BOOT_VERSION
@@ -7,8 +25,8 @@ LABEL org.opencontainers.image.authors="Oliver Sahner <osahner@gmail.com>"
 LABEL org.springframework.boot="${SPRING_BOOT_VERSION}"
 
 RUN mkdir /opt/app
-RUN addgroup --system --gid 1001 spring
-RUN adduser --system --no-create-home --uid 1001 --gid 1001 spring
+RUN addgroup -g 1001 -S spring
+RUN adduser -u 1001 -S spring -G spring
 RUN chown spring:spring /opt/app
 USER spring
 
